# naismith-nerds

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  bball_database.duckdb  eda.py  fly.toml  model_funs_rapm.py  pyproject.toml  rapm_model.py  rapm_model_main.py  render.yaml  requirements.txt  util_funs.py
collective-bball/: eda.py
collective-bball/funs/: util_funs.py
collective_bball/: GameResults.xlsm  basketball_data.py  bball_database.duckdb.wal  create_db_tables.py  eda.py  eda_main.py  etl.py  main.py  moneyline_model.py  player_data.py  plots.py  rapm_model.py  rapm_model_main.py  web_data_loader.py  win_prob_log_reg.py
collective_bball/funs/: model_funs_rapm.py  util_funs.py
collective_bball/utils/: make_player_thumbnails.py  onedrive_client.py  util_code.py
collective_bball_OO/: basketball_data.py  etl.py  main.py  moneyline_model.py  player_data.py  rapm_model.py
defunct/: acquire_token.py  gen_msal_keys.py  gen_msal_part2.py
flask_app/: app.py  player_page_data_loader.py  test.py  web_data_loader.py
flask_app/directory_imports/: tooltips.py
flask_app/static/css/: styles.css
flask_app/static/js/: birthdays.js  sticky-headers.js  tables.js  tabs.js  team-builder.js
flask_app/static/player_pics/: GameResults.xlsm
flask_app/templates/: base.html  date.html  index.html  index_tabulator.html  macros.html  player.html  upload.html
flask_app/utility_imports/: tooltips.py
functional_non_OO/collective_bball_non_OO/: eda_main.py
functional_non_OO/collective_bball_non_OO/funs/: model_funs_rapm.py  util_funs.py
functional_non_OO/flask_app_non_OO/: player_page_data_loader.py  web_data_loader.py
functional_non_OO/flask_app_non_OO/templates/: index.html  player.html
funs/: model_funs_rapm.py  util_funs.py
static/: styles.css
(+1 files in other folders)
