[project]
name = "naismith-nerds"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jason Gardner", email = "jmgjasongardner@gmail.com"},
]
dependencies = ["polars>=1.20.0", "black>=24.10.0", "scikit-learn>=1.6.1", "argparse>=1.4.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
